--- a/404.html
+++ b/404.html
@@ -50,13 +50,13 @@
 		</div>
 		<div class="header-menu">
 			<div class="container">
-				<a href="index.html" class="logo"><img src="assets/img/logo.svg" alt="logo"></a>
+				<a href="index.php" class="logo"><img src="assets/img/logo.svg" alt="logo"></a>
 				<nav class="nav-menu">
 					<ul class="nav-list">
 						<li class="dropdown">
 							<a href="#">Home <i class="fa fa-angle-down" aria-hidden="true"></i></a>
 							<ul>
-								<li><a href="index.html">Home One</a></li>
+								<li><a href="index.php">Home One</a></li>
 								<li><a href="home-two.html">Home Two</a></li>
 							</ul>
 						</li>
@@ -85,7 +85,7 @@
 			<h1 class="name">Oops!</h1>
 			<h3>Error message</h3>
 			<p>Don't worry let's go Home</p>
-			<a href="index.html" class="btn"><span>home</span></a>
+			<a href="index.php" class="btn"><span>home</span></a>
 		</div>
 	</section>
 	<!-- =============== PAGE-ERROR END =============== -->
