--- a/home-two.html
+++ b/home-two.html
@@ -46,7 +46,7 @@
 						</ul>
 					</div>
 					<div class="top-panel-center">
-						<a href="index.html" class="logo"><img src="assets/img/logo-white.svg" alt="logo"></a>
+						<a href="index.php" class="logo"><img src="assets/img/logo-white.svg" alt="logo"></a>
 					</div>
 					<div class="top-panel-right">
 						<ul class="icon-right-list">
@@ -65,7 +65,7 @@
 						<li class="dropdown">
 							<a href="#">Home <i class="fa fa-angle-down" aria-hidden="true"></i></a>
 							<ul>
-								<li><a href="index.html">Home One</a></li>
+								<li><a href="index.php">Home One</a></li>
 								<li class="active"><a href="home-two.html">Home Two</a></li>
 							</ul>
 						</li>
