--- a/contacts.html
+++ b/contacts.html
@@ -50,13 +50,13 @@
 		</div>
 		<div class="header-menu">
 			<div class="container">
-				<a href="index.html" class="logo"><img src="assets/img/logo.svg" alt="logo"></a>
+				<a href="index.php" class="logo"><img src="assets/img/logo.svg" alt="logo"></a>
 				<nav class="nav-menu">
 					<ul class="nav-list">
 						<li class="dropdown">
 							<a href="#">Home <i class="fa fa-angle-down" aria-hidden="true"></i></a>
 							<ul>
-								<li><a href="index.html">Home One</a></li>
+								<li><a href="index.php">Home One</a></li>
 								<li><a href="home-two.html">Home Two</a></li>
 							</ul>
 						</li>
@@ -84,7 +84,7 @@
 		<div class="container">
 			<h1>Contacts Us</h1>
 			<ul class="breadcrambs">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.php">Home</a></li>
 				<li>Contacts</li>
 			</ul>
 		</div>
